# os_in_rust

./: Cargo.toml  run_kernel.sh
kernel/: Cargo.toml
kernel/src/: main.rs
serial/: Cargo.toml
serial/src/: lib.rs
spin-lock/src/: lib.rs  once_lock.rs
vga-buffer/: Cargo.toml
vga-buffer/src/: lib.rs
vga_buffer/: Cargo.toml
vga_buffer/src/: lib.rs
volatile/: Cargo.toml
volatile/src/: lib.rs
